--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<!doctype html>
+
+<body>
+
 <link rel="stylesheet" type="text/css" href="style.css">
 <title> English Premier League </title>
 <img src="https://upload.wikimedia.org/wikipedia/en/thumb/f/f2/Premier_League_Logo.svg/1200px-Premier_League_Logo.svg.png">
@@ -50,3 +54,4 @@
 <li>20.Sunderland</li>
   </h2> 
 
+</body>
