--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 <title> English Premier League </title>
 <img src="https://upload.wikimedia.org/wikipedia/en/thumb/f/f2/Premier_League_Logo.svg/1200px-Premier_League_Logo.svg.png">
-<h2> EPL Table Premier League  
+<h2> EPL Table(6/4/2017)  
 <li>1.Chelsea</li>                             
 
  
