--- a/index.html
+++ b/index.html
@@ -6,52 +6,238 @@
 <title> English Premier League </title>
 <img src="https://upload.wikimedia.org/wikipedia/en/thumb/f/f2/Premier_League_Logo.svg/1200px-Premier_League_Logo.svg.png">
 <h2> EPL Table(6/4/2017)  
-<li>1.Chelsea</li>                             
-
+<li>Premier League
+Standings
+#
+Team
+MP
+W
+D
+L
+GF
+GA
+GD
+Pts
+1
  
-<li>2. Tottenham</li>
+Man. City
+11
+10
+1
+0
+38
+7
+31
+31
+2
  
-<li>3. Liverpool</li>
-
-<li>4.Man. City</li>
-
+Man United
+11
+7
+2
+2
+23
+5
+18
+23
+3
  
-<li>5.Arsenal</li>
-
+Tottenham
+11
+7
+2
+2
+20
+7
+13
+23
+4
  
-<li>6.Man United</li>
-
+Chelsea
+11
+7
+1
+3
+19
+10
+9
+22
+5
  
-<li>7.Everton</li>
-
+Liverpool
+11
+5
+4
+2
+21
+17
+4
+19
+6
  
-<li>8.West Brom</li>
-
+Arsenal
+11
+6
+1
+4
+20
+16
+4
+19
+7
  
-<li>9.Southampton</li>
-
+Burnley FC
+11
+5
+4
+2
+10
+9
+1
+19
+8
  
-<li>10.Watford</li>
+Brighton
+11
+4
+3
+4
+11
+11
+0
+15
+9
  
-<li>11.Leicester City</li>
+Watford
+11
+4
+3
+4
+17
+21
+-4
+15
+10
  
-<li>12.Stoke City</li>
+Huddersfield
+11
+4
+3
+4
+8
+13
+-5
+15
+11
  
-<li>13.Bournemouth</li>
+Newcastle
+11
+4
+2
+5
+10
+10
+0
+14
+12
  
-<li>14.Burnley FC</li>
+Leicester City
+11
+3
+4
+4
+16
+16
+0
+13
+13
  
-<li>15.West Ham</li>
+Southampton
+11
+3
+4
+4
+9
+11
+-2
+13
+14
  
-<li>16.Crystal Palace</li>
+Stoke City
+11
+3
+3
+5
+13
+22
+-9
+12
+15
  
-<li>17.Hull City</li>
-
-<li>18.Swansea City</li>
+Everton
+11
+3
+2
+6
+10
+22
+-12
+11
+16
  
-<li>19.Middlesbrough</li>
+West Brom
+11
+2
+4
+5
+9
+14
+-5
+10
+17
  
-<li>20.Sunderland</li>
+Bournemouth
+11
+3
+1
+7
+7
+14
+-7
+10
+18
+ 
+West Ham
+11
+2
+3
+6
+11
+23
+-12
+9
+19
+ 
+Swansea City
+11
+2
+2
+7
+7
+13
+-6
+8
+20
+ 
+Crystal Palace
+11
+1
+1
+9
+4
+22
+-18
+4</li>
  
 
   </h2> 
