--- a/index.html
+++ b/index.html
@@ -5,41 +5,19 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 <title> English Premier League </title>
 <img src="https://upload.wikimedia.org/wikipedia/en/thumb/f/f2/Premier_League_Logo.svg/1200px-Premier_League_Logo.svg.png">
-<h2> EPL Table(6/4/2017)  
+<h2> EPL Table(7/11/2017)  
 <li>Premier League
 Standings
 #
-Team
-MP
-W
-D
-L
-GF
-GA
-GD
-Pts
-1
+Team             MP     W     D     L     GF    GA     GD     Pts
+
  
-Man. City
-11
-10
-1
-0
-38
-7
-31
-31
-2
+1.   Man. City   11     10     1     0    38     7     31      31
+
  
-Man United
-11
-7
-2
-2
-23
-5
-18
-23
+2. Man United    11      7     2     2    23     5     18      23
+
+ 
 3
  
 Tottenham
