--- a/index.html
+++ b/index.html
@@ -6,62 +6,28 @@
 <title> English Premier League </title>
 <img src="https://upload.wikimedia.org/wikipedia/en/thumb/f/f2/Premier_League_Logo.svg/1200px-Premier_League_Logo.svg.png">
 <h2> EPL Table(7/11/2017)  
-<li>Premier League
-Standings
+<li> Premier League
+ Standings </li>
 #
-Team             MP     W     D     L     GF    GA     GD     Pts
+ <li> Team             MP     W     D     L     GF    GA     GD     Pts </li>  
 
  
-1.   Man. City   11     10     1     0    38     7     31      31
+ <li> 1.  Man. City    11     10    1     0     38     7     31      31 </li>
 
  
-2. Man United    11      7     2     2    23     5     18      23
+ <li> 2.  Man United   11     7     2     2     23     5     18      23 </li>
 
  
-3
+ <li> 3. Tottenham     11     7     2     2     20     7     13      23 </li>
+
  
-Tottenham
-11
-7
-2
-2
-20
-7
-13
-23
-4
+ <li> 4. Chelsea       11     7     1     3     19    10      9      22 </li>
+
  
-Chelsea
-11
-7
-1
-3
-19
-10
-9
-22
-5
+ <li> 5. Liverpool     11     5     4     2     21    17      4      19 </li>
+
  
-Liverpool
-11
-5
-4
-2
-21
-17
-4
-19
-6
- 
-Arsenal
-11
-6
-1
-4
-20
-16
-4
-19
+ <li> 6. Arsenal       11     6     1     4     20    16      4      19 </li>
 7
  
 Burnley FC
